# fastapi-101

./: Makefile  main.py  pyproject.toml  pyrightconfig.json
src/delivery/api/v1/items/: create_router.py  delete_router.py  find_all_router.py  find_one_router.py  item_request.py  items_router.py  update_router.py
src/domain/: exceptions.py  item.py  items_repository.py
src/infrastructure/: dummy_items_repository.py
src/use_cases/commands/: create_new_item_command.py  create_one_item_command.py  delete_new_item_command.py  delete_one_item_command.py  update_new_item_command.py  update_one_item_command.py
src/use_cases/queries/: find_all_items_query.py  find_one_item_query.py
tests/acceptance/delivery/api/v1/: test_items.py
tests/builders/: item_builder.py
tests/integration/infrastructure/: test_dummy_items_repository.py
tests/unit/use_cases/commands/: test_create_new_item_command.py  test_delete_new_item_command.py  test_update_new_item_command.py
tests/unit/use_cases/queries/: test_find_all_items_query.py  test_find_one_item_query.py
