[tool.poetry]
name = "fastapi-101"
version = "0.1.0"
description = "FastAPI 101"
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}
pytest = "^8.3.4"
expects = "^0.9.0"
doublex = "^1.9.6.1"
doublex-expects = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
